# cocomerge

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml
docs/: DEV.md  DEV_ZH.md  README_ZH.md
src/cocodex/: __init__.py  agent.py  cli.py  config.py  daemon.py  delete.py  failures.py  git.py  guard.py  protocol.py  session.py  state.py  status.py  tasks.py  transport.py
src/cocomerge/: __init__.py  agent.py  cli.py  config.py  daemon.py  git.py  protocol.py  session.py  state.py  status.py  tasks.py  transport.py
src/coconut/: agent.py  cli.py  config.py  daemon.py  git.py  session.py  tasks.py
tests/: run_release_scenarios.py
