[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cocomerge"
version = "0.1.0"
description = "Serialized Codex collaboration for shared Git repositories"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cocomerge = "cocomerge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
