[metadata]
name = cocodex
version = 1.0.0
description = Serialized Codex collaboration for shared Git repositories
long_description = file: README.md
long_description_content_type = text/markdown
author = Cocodex contributors
keywords = codex, git, collaboration, merge, worktree
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Version Control :: Git
project_urls =
    Repository = https://github.com/ivowang/cocodex
    Issues = https://github.com/ivowang/cocodex/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cocodex = cocodex.cli:main
